--- a/pom.xml
+++ b/pom.xml
@@ -597,6 +597,11 @@
             <artifactId>curator-recipes</artifactId>
             <version>2.7.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-test</artifactId>
+            <version>2.7.0</version>
+        </dependency>
         <!-- hessian -->
         <dependency>
             <groupId>com.caucho</groupId>
